--- a/rate_monotonic/README
+++ b/rate_monotonic/README
@@ -61,4 +61,6 @@ R_4 = 24 <= 26
 This experiment component will run the task set using POSIX RT
 SCHED_FIFO and check that no job of any of the tasks is ever
 late. Specifically, compile main.c, run it as ./main and see that no
-jobs in the resulting .bin files is marked as LATE.
+jobs in the resulting .bin files is marked as LATE. The .bin file can
+be read using the infrastructure component read_task_stats_file like
+../read_task_stats_file tau_3_stats.bin.
