--- a/earliest_deadline_first/README
+++ b/earliest_deadline_first/README
@@ -66,17 +66,19 @@ meanings:
    (s_{i,j}).
 3. "is dequeued" signifies the call to clock_nanosleep. This is the
    finishing time of a job (f_{i,j}).
-4. "uses up its c_s" signifies that the postponement of the CBS server
+4. "put_prev_task_dl" without being preceeded by "is dequeued" after
+   the last "is pick_next_task_dl-ed by" signifies preemption.
+5. "uses up its c_s" signifies that the postponement of the CBS server
    deadline is about to happen. In hard CBS replenishment behavior,
    "Hard CBS timer goes off" message will appear before the deadline
    postponement really happens with the appearance of "postpones its
    deadline to ..." message. In the original CBS replenishment
    behavior, the message "postpones its deadline to" directly follows
    the message "uses up its c_s".
-5. "d_s is renewed (r + D) to ..." signifies the CBS rule application
+6. "d_s is renewed (r + D) to ..." signifies the CBS rule application
    when a CBS server changes state from idle to active and
    c_s/(d_s - r) >= Q_s/T_s.
-6. "resumes its BW pair" signifies the CBS rule application when a CBS
+7. "resumes its BW pair" signifies the CBS rule application when a CBS
    server changes state from idle to active and
    c_s/(d_s - r) < Q_s/T_s.
 
@@ -93,3 +95,10 @@ wireless LAN connection. This was done by selecting an access point in
 GNOME wireless applet. Tadeus thinks that sched_wait_interval syscall
 is introduced into SCHED_DEADLINE at commit
 a827a2c853b15c0d11713d44ed442175f408467d to ameliorate this problem.
+
+The directory 003-HRTICK_enabled-wrong_overhead_approximation_problem
+shows how a CBS server deadline keeps being postponed when a task
+violates its stated WCET.
+
+The directory 004-HRTICK_enabled-various_problems show various
+problems observed in SCHED_DEADLINE scheduling logic.
